looks like the max is achieved on the boundary

--- a/venus-simulation.ipynb
+++ b/venus-simulation.ipynb
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "e9c59706",
    "metadata": {},
    "outputs": [
@@ -190,23 +190,23 @@
      "text": [
       "|   iter    |  target   |     A     |     B     |     C     |\n",
       "-------------------------------------------------------------\n",
-      "| \u001b[0m 1       \u001b[0m | \u001b[0m 2.24e+04\u001b[0m | \u001b[0m 9.674   \u001b[0m | \u001b[0m 5.518   \u001b[0m | \u001b[0m 9.73    \u001b[0m |\n",
-      "| \u001b[0m 2       \u001b[0m | \u001b[0m 5.331e+0\u001b[0m | \u001b[0m 7.177   \u001b[0m | \u001b[0m 7.008   \u001b[0m | \u001b[0m 2.239   \u001b[0m |\n",
-      "| \u001b[0m 3       \u001b[0m | \u001b[0m 7.757e+0\u001b[0m | \u001b[0m 9.765   \u001b[0m | \u001b[0m 0.1617  \u001b[0m | \u001b[0m 2.605   \u001b[0m |\n",
-      "| \u001b[0m 4       \u001b[0m | \u001b[0m 4.131e+0\u001b[0m | \u001b[0m 4.404   \u001b[0m | \u001b[0m 7.816   \u001b[0m | \u001b[0m 2.057   \u001b[0m |\n",
-      "| \u001b[0m 5       \u001b[0m | \u001b[0m 1.596e+0\u001b[0m | \u001b[0m 8.644   \u001b[0m | \u001b[0m 9.836   \u001b[0m | \u001b[0m 1.722   \u001b[0m |\n",
-      "| \u001b[95m 6       \u001b[0m | \u001b[95m 2.91e+04\u001b[0m | \u001b[95m 10.0    \u001b[0m | \u001b[95m 7.618   \u001b[0m | \u001b[95m 10.0    \u001b[0m |\n",
-      "| \u001b[0m 7       \u001b[0m | \u001b[0m 2.843e+0\u001b[0m | \u001b[0m 7.197   \u001b[0m | \u001b[0m 10.0    \u001b[0m | \u001b[0m 10.0    \u001b[0m |\n",
-      "| \u001b[95m 8       \u001b[0m | \u001b[95m 3.069e+0\u001b[0m | \u001b[95m 9.922   \u001b[0m | \u001b[95m 9.877   \u001b[0m | \u001b[95m 8.51    \u001b[0m |\n",
-      "| \u001b[0m 9       \u001b[0m | \u001b[0m 9.074e+0\u001b[0m | \u001b[0m 0.1     \u001b[0m | \u001b[0m 0.1     \u001b[0m | \u001b[0m 10.0    \u001b[0m |\n",
-      "| \u001b[95m 10      \u001b[0m | \u001b[95m 3.788e+0\u001b[0m | \u001b[95m 10.0    \u001b[0m | \u001b[95m 10.0    \u001b[0m | \u001b[95m 10.0    \u001b[0m |\n",
-      "| \u001b[0m 11      \u001b[0m | \u001b[0m 2.176e+0\u001b[0m | \u001b[0m 0.1     \u001b[0m | \u001b[0m 10.0    \u001b[0m | \u001b[0m 10.0    \u001b[0m |\n",
-      "| \u001b[0m 12      \u001b[0m | \u001b[0m 185.5   \u001b[0m | \u001b[0m 0.1     \u001b[0m | \u001b[0m 0.1     \u001b[0m | \u001b[0m 0.1     \u001b[0m |\n",
-      "| \u001b[0m 13      \u001b[0m | \u001b[0m 185.5   \u001b[0m | \u001b[0m 0.1     \u001b[0m | \u001b[0m 0.1     \u001b[0m | \u001b[0m 0.1     \u001b[0m |\n",
-      "| \u001b[0m 14      \u001b[0m | \u001b[0m 185.5   \u001b[0m | \u001b[0m 0.1     \u001b[0m | \u001b[0m 0.1     \u001b[0m | \u001b[0m 0.1     \u001b[0m |\n",
-      "| \u001b[0m 15      \u001b[0m | \u001b[0m 185.5   \u001b[0m | \u001b[0m 0.1     \u001b[0m | \u001b[0m 0.1     \u001b[0m | \u001b[0m 0.1     \u001b[0m |\n",
+      "| \u001b[0m 1       \u001b[0m | \u001b[0m 1.501e+0\u001b[0m | \u001b[0m 178.9   \u001b[0m | \u001b[0m 84.82   \u001b[0m | \u001b[0m 141.0   \u001b[0m |\n",
+      "| \u001b[0m 2       \u001b[0m | \u001b[0m 4.523e+0\u001b[0m | \u001b[0m 132.2   \u001b[0m | \u001b[0m 108.1   \u001b[0m | \u001b[0m 31.33   \u001b[0m |\n",
+      "| \u001b[0m 3       \u001b[0m | \u001b[0m 1.068e+0\u001b[0m | \u001b[0m 180.6   \u001b[0m | \u001b[0m 0.9657  \u001b[0m | \u001b[0m 36.68   \u001b[0m |\n",
+      "| \u001b[0m 4       \u001b[0m | \u001b[0m 2.607e+0\u001b[0m | \u001b[0m 80.44   \u001b[0m | \u001b[0m 120.8   \u001b[0m | \u001b[0m 28.66   \u001b[0m |\n",
+      "| \u001b[0m 5       \u001b[0m | \u001b[0m 1.207e+0\u001b[0m | \u001b[0m 159.7   \u001b[0m | \u001b[0m 152.4   \u001b[0m | \u001b[0m 23.76   \u001b[0m |\n",
+      "| \u001b[0m 6       \u001b[0m | \u001b[0m 1.413e+0\u001b[0m | \u001b[0m 175.6   \u001b[0m | \u001b[0m 82.42   \u001b[0m | \u001b[0m 140.5   \u001b[0m |\n",
+      "| \u001b[95m 7       \u001b[0m | \u001b[95m 1.882e+0\u001b[0m | \u001b[95m 185.0   \u001b[0m | \u001b[95m 122.9   \u001b[0m | \u001b[95m 145.0   \u001b[0m |\n",
+      "| \u001b[0m 8       \u001b[0m | \u001b[0m 1.756e+0\u001b[0m | \u001b[0m 184.9   \u001b[0m | \u001b[0m 149.4   \u001b[0m | \u001b[0m 87.09   \u001b[0m |\n",
+      "| \u001b[0m 9       \u001b[0m | \u001b[0m 4.419e+0\u001b[0m | \u001b[0m 0.0     \u001b[0m | \u001b[0m 0.0     \u001b[0m | \u001b[0m 145.0   \u001b[0m |\n",
+      "| \u001b[95m 10      \u001b[0m | \u001b[95m 2.24e+09\u001b[0m | \u001b[95m 185.0   \u001b[0m | \u001b[95m 155.0   \u001b[0m | \u001b[95m 145.0   \u001b[0m |\n",
+      "| \u001b[0m 11      \u001b[0m | \u001b[0m 1.032e+0\u001b[0m | \u001b[0m 0.0     \u001b[0m | \u001b[0m 155.0   \u001b[0m | \u001b[0m 145.0   \u001b[0m |\n",
+      "| \u001b[0m 12      \u001b[0m | \u001b[0m 1.476e+0\u001b[0m | \u001b[0m 143.0   \u001b[0m | \u001b[0m 155.0   \u001b[0m | \u001b[0m 145.0   \u001b[0m |\n",
+      "| \u001b[0m 13      \u001b[0m | \u001b[0m 1.63e+09\u001b[0m | \u001b[0m 185.0   \u001b[0m | \u001b[0m 0.0     \u001b[0m | \u001b[0m 145.0   \u001b[0m |\n",
+      "| \u001b[0m 14      \u001b[0m | \u001b[0m 1.97e+09\u001b[0m | \u001b[0m 183.1   \u001b[0m | \u001b[0m 151.1   \u001b[0m | \u001b[0m 129.5   \u001b[0m |\n",
+      "| \u001b[0m 15      \u001b[0m | \u001b[0m 195.0   \u001b[0m | \u001b[0m 0.0     \u001b[0m | \u001b[0m 0.0     \u001b[0m | \u001b[0m 0.0     \u001b[0m |\n",
       "=============================================================\n",
-      "Best result: {'A': 10.0, 'B': 10.0, 'C': 10.0}; f(x) = 37875.0.\n"
+      "Best result: {'A': 185.0, 'B': 155.0, 'C': 145.0}; f(x) = 2240290900.0.\n"
      ]
     }
    ],
@@ -229,7 +229,7 @@
     "\n",
     "# Set range of C to optimize for.\n",
     "# bayes_opt requires this to be a dictionary.\n",
-    "pbounds = {\"A\": [0.1, 10], \"B\": [0.1, 10], \"C\": [0.1, 10]}\n",
+    "pbounds = {\"A\": [0, 185], \"B\": [0, 155], \"C\": [0, 145]}\n",
     "# Create a BayesianOptimization optimizer,\n",
     "# and optimize the given black_box_function.\n",
     "optimizer = BayesianOptimization(f = black_box_function,\n",
